--- a/spring_application_mybatis/src/main/resources/application.properties
+++ b/spring_application_mybatis/src/main/resources/application.properties
@@ -2,18 +2,17 @@
 spring.datasource.url=jdbc:oracle:thin:@182.237.126.19:1521:XE
 spring.datasource.username=jdeveloper03
 spring.datasource.password=jdeveloper03
-
 ####################초기화시에 sql문실행####################
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:sql/schema.sql
 spring.sql.init.data-locations=classpath:sql/data.sql
 ####################MyBatis설정####################
 # mapper.xml 위치 지정
-
+mybatis.mapper-locations=com/mybatis3/dao/mapper/*.xml
 # model 프로퍼티 camel case 설정
-
+mybatis.configuration.map-underscore-to-camel-case=true
 # 패키지 명을 생략할 수 있도록 alias 설정
 
 # mapper 로그레벨 설정
-
+logging.level.com.mybatis3.dao=debug
 
