--- a/spring_application_dao/src/main/resources/application.properties
+++ b/spring_application_dao/src/main/resources/application.properties
@@ -1,3 +1,14 @@
+### 데이터베이스 설정
 spring.datasource.url=jdbc:oracle:thin:@182.237.126.19:1521:xe
 spring.datasource.username=jdeveloper03
 spring.datasource.password=jdeveloper03
+### 초기화시에 sql문 실행
+spring.sql.init.mode=always
+### myBatis 설정
+# mappse.xml 위치 지정
+mybatis.mapper-locations=com/itwill/guest/dao/mybatis/mapper/*.xml
+# model 프로퍼티 camel case 설정
+mybatis.configuration.map-underscore-to-camel-case=true
+# 패키지 명을 생략할 수 있도록 alias 설정
+# mappse 로그레벨 설정
+logging.level.com.itwill.guest.dao.mybatis=debug
