--- a/spring_application_dao/src/main/resources/application.properties
+++ b/spring_application_dao/src/main/resources/application.properties
@@ -11,4 +11,4 @@ mybatis.mapper-locations=com/itwill/guest/dao/mybatis/mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 # 패키지 명을 생략할 수 있도록 alias 설정
 # mappse 로그레벨 설정
-logging.level.com.itwill.guest.dao.mybatis=debug
+logging.level.com.itwill.guest.dao.mybatis=trace
