--- a/spring_application_mybatis/src/main/resources/application.properties
+++ b/spring_application_mybatis/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.sql.init.schema-locations=classpath:sql/schema.sql
 spring.sql.init.data-locations=classpath:sql/data.sql
 ####################MyBatis설정####################
 # mapper.xml 위치 지정
-mybatis.mapper-locations=com/mybatis3/dao/mapper/*.xml
+#mybatis.mapper-locations=com/mybatis3/basic/mapper/*.xml,com/mybatis3/dao/mapper/*.xml
 # model 프로퍼티 camel case 설정
 mybatis.configuration.map-underscore-to-camel-case=true
 # 패키지 명을 생략할 수 있도록 alias 설정
