--- a/spring_web_application_overview/src/main/resources/application.properties
+++ b/spring_web_application_overview/src/main/resources/application.properties
@@ -1,3 +1,11 @@
+################################ 로그 설정 ##################################
+logging.level.root=info
+logging.level.org.springframework.boot=info
+
+logging.level.org.springframework.context=debug
+logging.level.org.springframework.beans=debug
+logging.level.org.springframework.web=debug
+
 ################################ 서버 설정 ##################################
 #server.port=80
 server.servlet.context-path=/spring_web_application_overview
