--- a/spring_web_application/src/main/resources/application.properties
+++ b/spring_web_application/src/main/resources/application.properties
@@ -1,4 +1,8 @@
+################################ 로그 설정 ##################################
 logging.level.root=info
+logging.level.org.springframework.context=debug
+logging.level.org.springframework.beans=debug
+logging.level.org.springframework.web=debug
 ####################서버설정####################
 #server.port=80
 server.servlet.context-path=/spring_web_application
