--- a/user_spring/src/main/resources/application.properties
+++ b/user_spring/src/main/resources/application.properties
@@ -4,15 +4,15 @@ logging.level.org.springframework.beans=debug
 logging.level.org.springframework.context=debug
 logging.level.org.springframework.web=debug
 ####################서버설정####################
-#server.port=80
-server.servlet.context-path=/guest_spring
+server.port=80
+server.servlet.context-path=/user_spring
 #####################인코딩필터설정##############
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 #########################default-servlet활성화#################
 server.servlet.register-default-servlet=true
-####################InternalResourceViewResolver################
+##################InternalResourceViewResolver설정############
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 ####################데이타베이스설정####################
@@ -20,9 +20,5 @@ spring.datasource.url=jdbc:oracle:thin:@182.237.126.19:1521:XE
 spring.datasource.username=jdeveloper30
 spring.datasource.password=jdeveloper30
 ####################마이바티스설정####################
-#mybatis.type-aliases-package=com.itwill.guest
-#mybatis.mapper-locations=com/itwill/guest/mapper/**/*.xml
-
-
-
-
+#mybatis.type-aliases-package=com.itwill.user
+#mybatis.mapper-locations=com/itwill/user/mapper/*.xml
