--- a/user_spring/src/main/resources/application.properties
+++ b/user_spring/src/main/resources/application.properties
@@ -4,7 +4,7 @@ logging.level.org.springframework.beans=debug
 logging.level.org.springframework.context=debug
 logging.level.org.springframework.web=debug
 ####################서버설정####################
-server.port=80
+#server.port=80
 server.servlet.context-path=/user_spring
 #####################인코딩필터설정##############
 server.servlet.encoding.charset=UTF-8
