--- a/guest_spring/src/main/resources/application.properties
+++ b/guest_spring/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.datasource.url=jdbc:oracle:thin:@182.237.126.19:1521:XE
 spring.datasource.username=jdeveloper30
 spring.datasource.password=jdeveloper30
 ####################마이바티스설정####################
-#mybatis.type-aliases-package=com.itwill.guest
+mybatis.type-aliases-package=com.itwill.guest
 #mybatis.mapper-locations=com/itwill/guest/mapper/**/*.xml
 
 
