--- a/user_spring/build.gradle
+++ b/user_spring/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation "org.apache.tomcat.embed:tomcat-embed-jasper"
     implementation 'javax.servlet:jstl'
+	implementation 'org.apache.commons:commons-dbcp2:2.9.0'
 }
 
 tasks.named('test') {
