--- a/user_spring/src/main/resources/application.properties
+++ b/user_spring/src/main/resources/application.properties
@@ -1,24 +1,24 @@
-####################로그설정####################
+####################\ub85c\uadf8\uc124\uc815####################
 logging.level.root=info
 logging.level.org.springframework.beans=debug
 logging.level.org.springframework.context=debug
 logging.level.org.springframework.web=debug
-####################서버설정####################
+####################\uc11c\ubc84\uc124\uc815####################
 #server.port=80
-server.servlet.context-path=/user_spring
-#####################인코딩필터설정##############
-server.servlet.encoding.charset=UTF-8
-server.servlet.encoding.enabled=true
-server.servlet.encoding.force=true
-#########################default-servlet활성화#################
+#server.servlet.context-path=/user_spring
+#####################\uc778\ucf54\ub529\ud544\ud130\uc124\uc815##############
+#server.servlet.encoding.charset=UTF-8
+#server.servlet.encoding.enabled=true
+#server.servlet.encoding.force=true
+#########################default-servlet\ud65c\uc131\ud654#################
 server.servlet.register-default-servlet=true
-##################InternalResourceViewResolver설정############
+##################InternalResourceViewResolver\uc124\uc815############
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
-####################데이타베이스설정####################
+####################\ub370\uc774\ud0c0\ubca0\uc774\uc2a4\uc124\uc815####################
 spring.datasource.url=jdbc:oracle:thin:@182.237.126.19:1521:XE
 spring.datasource.username=jdeveloper30
 spring.datasource.password=jdeveloper30
-####################마이바티스설정####################
+####################\ub9c8\uc774\ubc14\ud2f0\uc2a4\uc124\uc815####################
 #mybatis.type-aliases-package=com.itwill.user
 #mybatis.mapper-locations=com/itwill/user/mapper/*.xml
