--- a/user_spring/src/main/resources/application.properties
+++ b/user_spring/src/main/resources/application.properties
@@ -6,6 +6,7 @@ logging.level.org.springframework.web=debug
 ####################\uc11c\ubc84\uc124\uc815####################
 #server.port=80
 #server.servlet.context-path=/user_spring
+server.servlet.session.tracking-modes=cookie
 #####################\uc778\ucf54\ub529\ud544\ud130\uc124\uc815##############
 #server.servlet.encoding.charset=UTF-8
 #server.servlet.encoding.enabled=true
