--- a/spring_web_application_rest/src/main/resources/application.properties
+++ b/spring_web_application_rest/src/main/resources/application.properties
@@ -10,3 +10,5 @@ server.servlet.context-path=/spring_web_application_rest
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
+#####################swagger##############
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
